Implement GET /medicines/:id request
